--- a/frontend/myapp/src/App.css
+++ b/frontend/myapp/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgb(28, 73, 162);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
