--- a/frontend/myapp/src/MainHeader.css
+++ b/frontend/myapp/src/MainHeader.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 .container .miniCalCollection{
