--- a/frontend/myapp/src/MainHeader.css
+++ b/frontend/myapp/src/MainHeader.css
@@ -5,40 +5,32 @@
     align-items: flex-end;
 }
 
-.container .miniCalCollection{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-.container .miniCal{
-    border: solid black;
-    display: flex;
-    justify-content: flex-end;
-    }
-
-
-.container .miniCalCollection .miniCal .dayClicked{
-    border-radius: 65px;
-    height: 40px;
-    width: 40px;
-    background-color: green;
-}
-
 .container .day:hover{
     background-color: teal;
 }
 
-/* latest */
-.container .day{
-    border-radius: 65px;
-    height: 40px;
-    width: 40px;
-    border: solid black;
+
+@media (max-width: 2000px) {
+.container .weekCountComponent {
+    border-radius: 50px;
+    height: 10vw;
+    width: 15vw;
+    }
 }
+
+/* When the display is 2000px wide or less do this */
+@media (max-width: 400px) {
+.container .day {
+    border-radius: 50%;
+    height: 10vw;
+    width: 10vw;
+    border: solid black;
+}}
+
 
 .container .weekLayout{
     display: flex;
-}
+    }
+
 
 
