--- a/frontend/myapp/src/StoryUi.css
+++ b/frontend/myapp/src/StoryUi.css
@@ -8,19 +8,19 @@
     border-radius: 20px;
     display: grid;
     /* fr refers to free space */
-    grid-template-columns: 10fr 10fr;
+    grid-template-columns: 10fr 20fr 10fr;
     grid-template-rows: 10fr 10fr 10fr;
     grid-template-areas: 
-    "a metrics"
-    "b metrics"
-    "b metrics"
+    "a x metrics"
+    "b x metrics"
+    "b x metrics"
     }
 }
 
 /* This applies to both text-a and text-b to make it easier to adjust across */
 .storyUi-Container .text-a, .text-b{
     /* border: solid red; */
-    width: 100%;
+    width: 195px;
     border-radius: 20px;
 }
 
@@ -44,12 +44,15 @@
 /* easy edit of metrics */
 .storyUi-Container .metric-a, .metric-b, .metric-c{
     border: solid salmon;
-    border-radius: 50%;
     background-color: whitesmoke;
-    width: 30%;
+    height: 50px;
+    width: 50px;
+    border-radius: 60%;
+    text-align: center;
+    font-weight: bold;
 }
 
-.storyUi-Container .metric-a{
+.storyUi-Container .metric-Container .metric-a{
     grid-area: metrica;
 }
 
@@ -59,4 +62,15 @@
 
 .storyUi-Container .metric-c{
     grid-area: metricc;
+}
+
+.label-Container{
+    grid-area: x;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    /* border: solid red; */
+    border-radius: 20px;
+    justify-content: space-evenly;
+    font-weight: bold;
 }
