--- a/frontend/myapp/src/Schedule.css
+++ b/frontend/myapp/src/Schedule.css
@@ -2,4 +2,13 @@
     border-radius: 50%;
     height: 20px;
     width: 20px;
+    align-self: flex-start;
 }   
+
+.ScheduleUi{
+    border: solid black;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+}
+
