--- a/frontend/myapp/src/StoryUi.css
+++ b/frontend/myapp/src/StoryUi.css
@@ -74,3 +74,13 @@
     justify-content: space-evenly;
     font-weight: bold;
 }
+
+.AnalyticsUiContainer{
+    display: flex;
+    border: solid;
+    flex-direction: column;
+}
+
+.AnalyticsUiContainer .AnalyticsUi-button{
+    font-weight: bold;
+}
