--- a/frontend/myapp/src/StoryUi.css
+++ b/frontend/myapp/src/StoryUi.css
@@ -17,6 +17,7 @@
     }
 }
 
+
 /* This applies to both text-a and text-b to make it easier to adjust across */
 .storyUi-Container .text-a, .text-b{
     /* border: solid red; */
@@ -61,6 +62,71 @@
 }
 
 .storyUi-Container .metric-c{
+    grid-area: metricc;
+}
+
+@media (max-width: 2000px){
+    .storyUi-Container-alternate{
+        background-color: blue;
+        border: solid salmon;
+        /* top left right bot right left */
+        /* border-radius: 20px 20px 40px 40px; */
+        border-radius: 20px;
+        display: grid;
+        /* fr refers to free space */
+        grid-template-columns: 10fr 20fr 10fr;
+        grid-template-rows: 10fr 10fr 10fr;
+        grid-template-areas: 
+        "a x metrics"
+        "b x metrics"
+        "b x metrics"
+        }
+    };
+
+/* This applies to both text-a and text-b to make it easier to adjust across */
+.storyUi-Container-alternate .text-a, .text-b{
+    /* border: solid red; */
+    width: 195px;
+    border-radius: 20px;
+}
+
+.storyUi-Container-alternate .text-a{
+    grid-area: a;
+}
+
+.storyUi-Container-alternate .text-b{
+    grid-area: b;
+}
+
+/* I turned the metric flexbox into a pluggable grid-area named metrics. */
+.storyUi-Container-alternate .metric-Container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    grid-area: metrics;
+    justify-content: space-evenly;
+}
+
+/* easy edit of metrics */
+.storyUi-Container-alternate .metric-a, .metric-b, .metric-c{
+    border: solid salmon;
+    background-color: whitesmoke;
+    height: 50px;
+    width: 50px;
+    border-radius: 60%;
+    text-align: center;
+    font-weight: bold;
+}
+
+.storyUi-Container-alternate .metric-Container .metric-a{
+    grid-area: metrica;
+}
+
+.storyUi-Container-alternate .metric-b{
+    grid-area: metricb;
+}
+
+.storyUi-Container-alternate .metric-c{
     grid-area: metricc;
 }
 
