--- a/frontend/myapp/src/Navbar.css
+++ b/frontend/myapp/src/Navbar.css
@@ -2,7 +2,8 @@
     display: flex;
     grid-template-rows: 100px 100px;
     padding: 5px;
-    justify-content: right;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .nav-item{
@@ -10,7 +11,10 @@
     font-weight: 300;
     background-color: #59ffa1;
     flex-direction: row;
-    font-size: 25px;
-    padding: 7px;
-    border-radius: 20px;
+    font-size: large;
+    padding: 1px;
+    border-radius: 12px;
+    margin-bottom: -5px;
+    margin-top: -5px;
+    margin-right: -3px;
 }
