--- a/frontend/myapp/src/Schedule.css
+++ b/frontend/myapp/src/Schedule.css
@@ -3,8 +3,16 @@
     height: 20px;
     width: 20px;
     align-self: flex-start;
-   background-color: #59ffa1;
-}  
+   background-color: #00a62a;
+}
+
+.scheduleButtonYellow{
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    align-self: flex-start;
+    background-color: yellow;
+}
 
 .scheduleButtonOff{
     border-radius: 50%;
@@ -13,10 +21,15 @@
     align-self: flex-start;
 }   
 
-.ScheduleUi{
+.Container-ScheduleUi{
     border: solid black;
     margin-bottom: 5px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+
+/* consider making this change dynamically to a dif background color */
+.item-ScheduleText{
+    display: flex;
 }
 
