--- a/frontend/myapp/src/AnalyticsUi.css
+++ b/frontend/myapp/src/AnalyticsUi.css
@@ -17,10 +17,22 @@
     justify-content: center;
 }
 
-.AnalyticsUiContainer .AnalyticsUi-button{
+.Current-View-Events{
     font-weight: bold;
     color: white;
     background-color: black;
+}
+
+.Current-View-For-People{
+    font-weight: bold;
+    color: black;
+    background-color: turquoise;
+}
+
+.Current-View-Bugs{
+    font-weight: bold;
+    color: black;
+    background-color: rgba(246, 46, 46, 0.674);
 }
 
 .List-Container {
