--- a/frontend/myapp/src/pages/Layout.css
+++ b/frontend/myapp/src/pages/Layout.css
@@ -8,6 +8,8 @@
     background-color: #282c34;
     border: solid aquamarine;
     margin: 2px;
+    border-radius: 5%;
+    font-size: 15px
 };
 
 .layout-item{
