--- a/frontend/myapp/src/AnalyticsUi.css
+++ b/frontend/myapp/src/AnalyticsUi.css
@@ -2,6 +2,8 @@
     display: flex;
     border: solid;
     flex-direction: column;
+    position: relative;
+    z-index: 5;
 }
 
 .AnalyticsUi-Interval{
@@ -60,9 +62,31 @@
     justify-content: center;
 }
 
-.AnalyticsUi-Completed{
+.AnalyticsUi-Exp{
     width: 100%;
     display: flex;
     flex-direction: column;
     background-color: #59faa1;
 }
+
+.Exp-Bar-Container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: blue;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.Exp-Fill{
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+    position: absolute;
+    z-index: 3;
+    color: red;
+    height: 100%;
+    overflow: hidden;
+}
+
