--- a/frontend/myapp/src/AnalyticsUi.css
+++ b/frontend/myapp/src/AnalyticsUi.css
@@ -37,6 +37,12 @@
     background-color: rgba(246, 46, 46, 0.674);
 }
 
+.Current-View-Tasks{
+    font-weight: bold;
+    color: black;
+    background-color: rgba(20, 80, 164, 0.674);
+}
+
 .List-Container {
     opacity: 75%;
     background-color: black;
