--- a/frontend/myapp/src/AnalyticsUi.css
+++ b/frontend/myapp/src/AnalyticsUi.css
@@ -43,6 +43,12 @@
     background-color: rgba(20, 80, 164, 0.674);
 }
 
+.Current-View-Inventory{
+    font-weight: bold;
+    color: black;
+    background-color: rgba(20, 80, 164, 0.674);
+}
+
 .List-Container {
     opacity: 75%;
     background-color: black;
