--- a/frontend/myapp/src/AnalyticsUi.css
+++ b/frontend/myapp/src/AnalyticsUi.css
@@ -61,6 +61,12 @@
     background-color: turquoise;
 }
 
+.Current-View-Recipes{
+    font-weight: bold;
+    color: black;
+    background-color: rgba(246, 46, 46, 0.674);
+}
+
 .List-Container {
     opacity: 75%;
     background-color: black;
