--- a/frontend/myapp/src/MiniCalendar.css
+++ b/frontend/myapp/src/MiniCalendar.css
@@ -1,5 +1,5 @@
 .mini-cal {
-    background-image: linear-gradient(to right, blue, #59faa1);
+    background-image: linear-gradient(to right, #f4f5f7, #59faa1);
     width: 100%;
     justify-content: space-around;;
 }
@@ -10,7 +10,7 @@
     align-items: flex-start;
     justify-content: center;
     font-style: italic;
-    color: #59faa1;
+    color: black;
 }
 
 @media (max-width: 428px){
