--- a/frontend/myapp/src/Schedule.css
+++ b/frontend/myapp/src/Schedule.css
@@ -70,3 +70,11 @@
     align-items: center;
     font-size: 14px;
 }
+
+.schedule-title{
+    font-family: RubikDirt-Regular;
+}
+
+.schedule-quote{
+    font-family: RubikDirt-Regular;
+}
