--- a/frontend/myapp/src/Workouts.css
+++ b/frontend/myapp/src/Workouts.css
@@ -47,3 +47,7 @@ button{
 .muscle-groups-title{
     font-family: RubikDirt-Regular;
 }
+
+.macro-calculator-title{
+    font-family: RubikDirt-Regular;
+}
