--- a/frontend/myapp/src/fonts.css
+++ b/frontend/myapp/src/fonts.css
@@ -7,3 +7,8 @@
     font-family: 'FrederickatheGreat-Regular';
     src: url('../fonts/forTitles/FrederickatheGreat-Regular.ttf') format('truetype')
 }
+
+@font-face {
+    font-family: 'PlaywriteITModerna-VariableFont_wght';
+    src: url('../fonts/cursive/PlaywriteITModerna-VariableFont_wght.ttf') format('truetype')
+}
