--- a/frontend/myapp/src/Schedule.css
+++ b/frontend/myapp/src/Schedule.css
@@ -1,5 +1,6 @@
 
 .scheduleButtonOn{
+    display: flex;
     border-radius: 50%;
     height: 20px;
     width: 20px;
@@ -9,6 +10,7 @@
 
 
 .scheduleButtonYellow{
+    display: flex;
     border-radius: 50%;
     height: 20px;
     width: 20px;
@@ -17,6 +19,7 @@
 }
 
 .scheduleButtonOff{
+    display: flex;
     border-radius: 50%;
     height: 20px;
     width: 20px;
@@ -107,8 +110,8 @@ textarea{
     justify-content: flex-start;
     flex-direction: row;
     align-items: center;
-    font-size: 15px;
-    /* font-size: 20px; */
+    /* font-size: 15px; */
+    font-size: 20px;
     font-family: PlaywriteITModerna-VariableFont_wght;
     color: hsl(144, 100%, 1%);
 }
